<resources>
    <string name="app_name">墨染博物馆</string>
    <string name="facebook_app_id">550504378626576</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_1">发现</string>
    <string name="tab_2">分类</string>
    <string name="tab_3">画架</string>
    <string name="tab_4">我的</string>
    <string name="search_jinrituijian_tab">今日推荐</string>
    <string name="search_yishuxianfeng_tab">艺术先锋</string>
    <string name="search_shangchuan_tab">最新上传画单</string>
    <string name="search_zhuti_tab">最热主题画单</string>
    <string name="dakashuo">大咖说</string>
    <string name="dujingcai">读精彩</string>
    <string name="lijifenxiang">立即分享</string>
    <string name="chushifenlei">初始分类</string>
    <string name="zidingyi">用户自定义</string>
    <string name="wait">请稍后</string>
    <string name="net_dissconncted">网络失去连接</string>
    <string name="exit_fenghuo">再次按返回键退出</string>
    <string name="need_location">需要打开定位</string>
    <string name="gentle_man">男</string>
    <string name="lady">女</string>
    <string name="division">地区</string>
    <string name="need_permission">需要手机权限，不开启将无法正常工作！</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="sign_out_sure">确定退出登录?</string>
    <string name="choose_your_language">请选择应用使用的语言</string>
    <string name="chinese">中文</string>
    <string name="english">English</string>
    <string name="account_security">账户安全</string>
    <string name="bind">绑定</string>
    <string name="change_password">修改密码</string>
    <string name="not_set_up">未登录</string>
    <string name="device">设备</string>
    <string name="no_device">暂未绑定设备</string>
    <string name="add_device">添加设备</string>
    <string name="wifi_setting">Wi-Fi配置</string>
    <string name="scan_success">扫描已成功</string>
    <string name="scan_not_success">扫描未成功</string>
    <string name="discon_device">确定移除设备?</string>
    <string name="connected_user">已绑定该画框用户</string>
    <string name="approve">批准</string>
    <string name="reject">拒绝</string>
    <string name="connected_device">已绑定该画框用户</string>
    <string name="remove">移除</string>
    <string name="device_manage">设备管理</string>
    <string name="unbind_all_msg">如果您解绑该设备，所有与该设备绑定的\n用户将会自动解绑</string>
    <string name="generate_qr_code">正在生成二维码\n请稍后</string>
    <string name="please_sign_in">请您登陆后添加设备</string>
    <string name="bind_success">绑定成功</string>
    <string name="request_use_device_msg">该设备已被绑定，是否请求\n使用该设备</string>
    <string name="go_wifi_and_use">请进入Moran画框设置页面\n并进入Wi-Fi链接选项</string>
    <string name="device_scan_qr_to_auto_scan">请在墨染画框上选择“链接app”\n并将墨染画框中的二维码放入框内\n即可自动扫描</string>
    <string name="no_wifi">无信号\n请检查网络连接</string>
    <string name="horizontal">横</string>
    <string name="veritical">竖</string>
    <string name="all_ori">横竖</string>
    <string name="recent_search">最近搜索</string>
    <string name="search">搜索</string>
    <string name="hot_search">热门搜索</string>
    <string name="artist">作者</string>
    <string name="gallery">画单</string>
    <string name="paint">画作</string>
    <string name="no_result">无结果</string>
    <string name="mine_setting">设置</string>
    <string name="deny">拒绝</string>
    <string name="deleting">删除中</string>
    <string name="delete_success">删除成功</string>
    <string name="feedback">意见反馈</string>
    <string name="current_version">软件版本</string>
    <string name="language">语言选择</string>
    <string name="cache">清除缓存</string>
    <string name="sign_out">退出登录</string>
    <string name="about_us">关于我们</string>
    <string name="delete_all_cache">确定删除所有缓存？\n离线内容及图片均会被清除</string>
    <string name="user_suggest">意见反馈</string>
    <string name="resend">重新发送</string>
    <string name="verify_code">输入验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="next_step">下一步</string>
    <string name="not_bind">未绑</string>
    <string name="change_bind">换绑</string>
    <string name="connected">绑定</string>
    <string name="after_sign_access_permission">登陆后该应用将获得以下权限</string>
    <string name="search_friend_aom">寻找与你共同使用该应用的好友"</string>
    <string name="sign_in">登录</string>
    <string name="wrong_password">邮箱或密码错误</string>
    <string name="user_name_email">请输入用户名/邮箱号</string>
    <string name="forget_password">忘记密码</string>
    <string name="sign_up">注册</string>
    <string name="sign_up_later">稍后注册</string>
    <string name="security_send_email">为了安全，我们会向您的邮箱发送验证码</string>
    <string name="verify_email">邮箱验证</string>
    <string name="reset_password">重置密码</string>
    <string name="retype_password">再次输入</string>
    <string name="new_password">新密码</string>
    <string name="verity_code">验证码</string>
    <string name="email">邮箱号</string>
    <string name="password_not_identify">两次密码不一致请再次输入</string>
    <string name="wrong_code">验证码错误</string>
    <string name="email_has_sent">验证码已发到电子邮箱</string>
    <string name="birthday">生日</string>
    <string name="gender">性别</string>
    <string name="nick_name">昵称</string>
    <string name="account_bg">个人主页背景</string>
    <string name="person_des">介绍</string>
    <string name="upload_success">完成</string>
    <string name="my_profile">头像</string>
    <string name="type_password">输入密码</string>
    <string name="has_bind_num_device_msg">绑定画框 </string>
    <string name="paint_name">画单名称</string>
    <string name="type_different_name">该画单已存在</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="no_lining">无内衬</string>
    <string name="texture">材质</string>
    <string name="white_board">白色\n卡纸</string>
    <string name="beige_board">米色\n纹路</string>
    <string name="xuan_board">仿古\n宣纸</string>
    <string name="grey_board">灰色\n质感</string>
    <string name="black_board">黑色\n哑光</string>
    <string name="art">艺术</string>
    <string name="mood">心情</string>
    <string name="scenes">场景</string>
    <string name="input_password">请输入密码</string>
    <string name="login_wechat">微信登录</string>
    <string name="login_weibo">微博登录</string>
    <string name="at_museum">墨染博物馆(AT Museum)数字应用</string>
    <string name="agree">我已阅读，谢谢</string>
    <string name="register_msg_detail">本协议是您和Moran（以下简称“我们”、“本系统”、“本产品”、“本服务”等）就我们提供的产品和服务达成的全部共识。您在进入Moran系统或者使用我们的Moran画框产品或者服务之时，意味着您同意并且接受本协议全部条款的约束。请认真阅读本协议的全部内容，如果您有任何的疑问或建议，欢迎与我们联系。\n
1.  Moran数字画框及其使用\n
1.1 Moran数字画框的定义\n
Moran数字画框为点滴未来（北京）文化科技有限公司下的系统产品名称。整个系统产品涵盖iOS与Android APP端，网站，云服务，硬件显示端等。\n
1.2 Moran的使用前提\n
您同意与Moran数字画框之间的关系受到法律约束是您使用本产品或者服务的前提。使用本产品或者服务包括浏览、搜索、互动交流等行为。在本协议许可的范围内，您享有不可转让的、有限的、非排他的使用Moran数字画框产品或者服务的权利。如果您年龄小于10周岁，您不符合使用我们产品或者服务的年龄条件。请注意我们在官网上展示的内容涵盖了较大的艺术品范畴，部分内容可能包含裸体或者其他被认为不适宜少年儿童观看的内容。如果您允许您的孩子或者其他在您监护下的儿童访问Moran数字画框，就意味着您已知晓这些问题并且有责任阻止他们访问您认为不适宜他们接触到的特定内容。如果您接受本协议，本协议将对您和您所代表的法律实体生效，除非您做出相反的特别声明。\n
1.3 Moran数字画框特定产品与服务的使用\n
1.3.1 特别协议或者条款\n
Moran数字画框下的某些特定产品或者服务如需其他协议或者条款另行约定，您在进入或者开始使用这些产品或者服务的时候，意味着您同意并遵守相应协议或者条款的约束。\n
1.3.2 账号\n
当您使用某些特定产品或者服务的时候，需要注册Moran数字画框帐号以满足全部使用条件。您需要向我们提供真实有效的个人信息并及时更新。您不能出租、出售或者转让您的帐号给任何第三方个人或者机构。您需要对您自己的用户名、密码及相关信息做好保密工作。当您发现失去帐号控制权或者帐号有安全隐患的时候，请及时联系我们。\n
1.3.3 隐私条款\n
请仔细阅读我们的隐私条款，该条款规定了当您使用我们产品或者服务的时候，我们如何收集和使用您的个人信息。我们的隐私条款作为本用户协议的一部分纳入整体的用户协议中，请访问https://www.atmoran.com/useragreement.html浏览我们的隐私条款。当您使用我们的产品或者服务时，您同意我们在用户协议和隐私条款的适用范围内收集与使用您的个人信息。\n
2. 内容、所有权与授权\n
2.1协议内容\n
本协议中的“内容”，包括了组成并维系本系统运行的所有文字、图片、音频、视频、代码、软件和其他信息、材料、资料等。本协议下所有内容的所有权均属于Moran数字画框或者将所有权转让给我们的个人或者机构，这些内容的所有权受到中华人民共和国及其他国家或者地区的知识产权法与其他财产权法律的保护。Moran数字画框拥有并保留全部的权利，包括我们创建或者提供给您的产品或者服务中的界面、设计、排版、功能等内容，这些权利包括但不限于所有的著作权、专利权、商标权、商业秘密和其他的知识产权和所有权。您在使用我们的产品或者服务时，并不拥有除了本协议中规定的权利以外的其他权利，尤其是著作权、商标权或者其他知识产权的所有权或者使用权。我们拥有并且保留明确授予您某些权利的权利。\n
3.1 用户互动内容指导原则与用户管理\n
（1）所有用户发表的内容必须遵守中华人民共和国或者所在国法律。\n
（2）针对国家、民族、种族、宗教等歧视或者仇恨的内容将会被删除。\n
（3）涉及淫秽色情、暴力血腥、意识形态等敏感题材或者其他不良题材的内容将会被删除。\n
（4）人身攻击、故意骚扰和其他涉及恶意或者滥用及侵犯他人隐私的内容将会被删除。\n
（5）依据前述指导原则的规定或根据用户或者其他所有权人的投诉，Moran数字画框可能删除您发表的内容，并保留对您的帐户进行进一步处理的权利。\n
（6）Moran数字画框管理员有权删除违反法律法规、用户协议、隐私政策或指导原则的任何内容。有冒充其他用户、滥用服务资源、过度营销、恶意攻击或者群发广告等行为的用户将会被冻结权限。如遇到特殊情况或者相关立法、司法、行政要求，Moran数字画框保留直接停用或者注销用户帐号的权利。\n
3.2  Moran数字画框依据中华人民共和国法律运营，我们不能完全保证我们的产品或者服务在中华人民共和国以外的国家或地区仍旧可以使用。如果您在中华人民共和国以外的国家或地区使用Moran数字画框，请遵守您所在地的地方、州或者国家的法律、法规及规章的规定。\n
4. 官方应用程序\n
我们的服务包括了提供给您可以下载安装的应用程序。当您使用我们应用的时候，我们与您订立的用户协议、隐私条款和其他条款仍然适用。如果应用协议有特别约定的，特别约定条款只适用于应用程序中，而不能适用于Moran数字画框的其他产品服务中，且我们对此拥有最终解释权。您同意我们可以单方面在不告知您的情况下，升级我们的应用。本协议对更新后的应用仍然适用。\n
5. 其他网站和服务\n
我们的服务可能与其他不属于我们管辖范围的第三方服务建立帐户或者功能上的联系。此类服务主要是出于您使用方便的考虑，我们并不承担由这些网站服务、信息、商品或者其他服务引起的连带责任，因使用此类网站或者服务引发的风险将由您自行承担。我们对如下的内容不承担任何直接或者间接的责任：\n
（1）这些网站的可用性；\n
（2）这些网站或者服务因使用不当带来的损失或者损害。\n
6. 著作权声明\n
（1）用户从Moran数字画框或其他网站通过转载、复制、截图等方式获取他人内容，包括但不限于上文中的原创作品、动态、展览信息、简介、评论等内容，相关内容的著作权属于原作者。用户不得侵犯他人包括著作权在内的知识产权及其他权利。因用户发布他人作品引发知识产权或其他法律纠纷的，用户须自行承担一切后果，与Moran数字画框无关。\n
（2）Moran数字画框提供的网络服务中包含的标识、版面设计、排版方式、文本、图片、图形等均受著作权、商标及其它法律保护，未经相关权利人（含Moran数字画框及其他原始权利人）同意，上述内容均不得在任何平台被直接或间接发布、使用、出于发布或使用目的的改写或再发行，或被用于其他任何商业目的。\n
（3）Moran数字画框有权但无义务对用户发表的互动内容进行审核，并有权根据相关证据结合《侵权责任法》、《消费者权益保护法》、《信息网络传播权保护条例》等法律法规及Moran数字画框指导原则对侵权信息进行处理。\n
（4）Moran数字画框尊重权利人的知识产权和合法权益。若权利人认为Moran数字画框上传的内容侵犯自身著作权或其他合法权益，可向Moran数字画框帮助邮箱admin@atmoran.com发出书面申请。Moran数字画框在书面审核相关齐备材料后，有权在不事先通知相应发布用户的情况下自行删除相关内容，并依法保留相关数据。在Moran数字画框发布内容，即视为用户同意Moran数字画框就前述情况所采取的相应措施，Moran数字画框不因此而承担任何违约、侵权或其他法律责任；\n
（5）Moran 数字画框根据上述原因删除相关内容的，如果相关用户认为投诉不属实，可依法向Moran数字画框帮助邮箱（admin@atmoran.com）发出关于被删除内容不侵犯著作权的书面反诉申请。我们在相关材料齐备后，将根据实际情况进行处理。\n
7. 责任承担\n
7.1 免责\n
我们尽全力确保本服务的运行状态与功能的可用性，您须同意在使用本服务中出现的一些风险由您自己承担。在本协议框架的最大范围内，我们保证所有服务均向您提供了最新的可靠版本，这些保证包括但不限于各项服务或内容准确的展现，安全或没有病毒或其他有害成分的保证。我们的服务和功能可能会在不告知您的情况下随时进行变更，我们保留更改、更新、增加、删除或者中止（部分）服务功能的权利，包括但不限于服务的界面、设计、产品功能等。我们可以单方面在任何时候，全部或者部分，临时或者永久，告知或者不告知地进行服务变更。我们对服务变更造成的对您及第三方的影响概不负责。我们对他人通过欺骗或者欺诈的手段访问我们的服务并产生非法的、有攻击性的危害行为不负责任。我们对相关服务或者第三方的其他问题产生的问题也不负责任，无论这些行为是在线或离线、是否产生交易、是否涉及用户内容等。同时我们也申明不会对第三方服务的质量或者可用性、在第三方服务中涉及的关于财产权的交易行为等承担任何责任。每一个用户均需对自己与其他用户或者第三方服务的沟通、交易和其他互动行为负责。Moran数字画框及其员工、拥有者、董事会、顾问、代理商或者雇员对于以下的行为产生的赔偿或者损害将不承担责任：\n
（1）您与其他用户的赔偿和纠纷；\n
（2）针对其他用户的内容；\n
（3）第三方服务上提供或者出售的任何作品或者内容；\n
（4）任何未经授权的第三方进入或者使用我们的产品和服务，您的帐号或用户内容。\n
7.2 有限责任\n
在任何情况下，Moran数字画框及其员工、拥有者、董事会、顾问、代理商或者雇员对以下的行为将不会承担间接的、偶然的、惩罚性的特定的、或者与利润、收入、数据、使用权、声誉或者其他无形资产相挂钩的损害责任：\n
（1）无法使用本服务；\n
（2）第三方在我们服务上进行的操作；\n
（3）在任何情况下，如果因为任何内容、产品、服务的原因而使得Moran数字画框及其员工、拥有者、董事会、顾问、代理商或者雇员等被要求超过1500元人民币的赔偿的，我们将有三个月的时间决定是否对此进行补偿。有限责任适用于所有索赔，不论是基于约定、合同、侵权（包括过失）、严格责任或任何其他法律问题。\n
7.3 用户赔偿责任\n
您同意捍卫并且补偿Moran数字画框及其管理人员、董事、代理和雇员等免受由于第三方和您的过失带来的一切损失。包括您的用户信息、任何由您产生的虚假的内容或者其他违反法律或者第三方协议的行为。这些损失包括因为损坏、损失和花费（包括律师费、诉讼费、鉴定费、差旅费、食宿费等）带来的诉讼或者赔偿责任。我们保留辩护的权利，与此同时您必须为我们行使这个权利提供尽可能的支持。这一赔偿和辩护的义务具有独立性，不因本协议的终止而失效。\n
8. 协议的变更、中止和终止\n
8.1 我们保留在任何情况下单方面更改本协议的权利，这些权利包括更改、增加或者删除本协议中的任何条款。除非我们因为监管或者法律原因进行的变更，否则我们将会在正式变更前提供7天的更新条款公示期。您同意我们可以通过更新本条款页面对条款的变更进行告知，您需要时不时检查本页面以跟踪最新的变更。本协议更新的内容将会被发布在网站中或合并到后续的协议版本中。如您在协议变更后继续使用我们的产品，就意味着您接受我们对协议的变更。本协议的变更不适用于变更前引起的索赔或者纠纷事件，所有的索赔纠纷以当时可执行的协议版本为准。\n
8.2 您可以在任何时候停止使用我们的服务。当您违反本协议的时候，您同意我们可以单方面在任何时候中止这份协议，限制、中止或者暂停您对本服务的访问，或者收回您的用户名，而不承担告知或者其他责任。当您中止协议或者停止使用我们产品的时候，以下内容仍然保持完整的效力并具备可执行条件：\n
（1）您与我们之间未了债务，包括支付债务；\n
（2）所有可以补救本协议的措施和本协议的以下条款：\n
a.内容、所有权与授权，\n
b.用户使用指导与管理，\n
c.其他网站和服务，\n
d.著作权声明，\n
e.责任承担，\n
f.协议的变更、中止和终止中止，\n
g.法律适用与争议解决。\n
9. 全部条款\n
本协议包含我们的隐私条款、其他纳入本协议参考范围的条款（包括书面协议）和我们的销售协议，构成了您与Moran数字画框之间的全部的协议和共识。这些内容将取代早前您与我们达成的所有的其他书面、口头或者电子的协议。您和我们一致同意，如果本协议的任何条款被有管辖权的仲裁机构认定为无效或者裁决有其他不可执行的任何理由，该条款将被执行到最大允许的范围内，本协议的其他所有条款将继续有效。\n
10. 其他\n
我们延迟或者未能执行本协议的某些条款或者规定赋予的权利将不能被视为我们放弃此类权利。除非我们提供正式签署书面的声明，否则我们不放弃任何一项本协议中赋予的权利或者后续措施。本协议可以作为继承或者受让的一部分使用，但是只有您获得我们的书面授权后，这些权利才能够生效。本协议的内容和我们的在本协议下的权利将直接被我们的后继者或者受让人继承。除非另有所指，本协议只针对Moran数字画框和您生效，并无对其他第三方的约束力。本协议中的双方不涉及您的任何代理、合伙、合资、雇佣、经销商关系，他们亦不受本协议的约束。本协议以简体中文和英文写成，任何可能的由于翻译造成的歧义或者冲突以简体中文版为准。本协议的章节设置只为表述方便，不具有任何合同章节的法律效力。\n
11. 联系\n
当您使用本服务或者通过包括邮件在内的方式与我们沟通时，我们就认为您与我们建立了“线上对话”。您同意我们可以通过给您发邮件或通知等方法建立有效的对话，同意我们可以合乎要求地在此基础上遵照本协议向您发布协议、披露通知和其他对话内容。因为您或者您的服务提供商设置的邮件过滤器带来的对话信息遗漏情况我们概不负责。如果您对我们的产品、服务条款或者隐私政策有任何的疑问或者建议，都可以发送邮件到admin@atmoran.com与我们沟通。\n
12. 法律适用与争议解决\n
因本协议引起的或与本协议有关的任何争议，均适用中华人民共和国法律并应由双方友好协商解决。协商不成的，均提请北京仲裁委员会按照其仲裁规则在北京仲裁。仲裁语言为中文。仲裁裁决是终局的，对双方均有约束力。因仲裁案件发生的仲裁费、鉴定费、公证费、律师费等与案件相关的费用由败诉方承担。\n
13. 本协议的最终解释权及修订权归点滴未来（北京）文化科技有限公司所有。\n
</string>
</resources>