<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:background="#e4e4e4"
    android:orientation="horizontal"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:id="@+id/frame_color_1"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent">
        <ImageView
            android:src="@mipmap/frame_color1"
            android:paddingTop="28dp"
            android:paddingLeft="20dp"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:text="@string/white_board"
            android:layout_gravity="right"
            android:layout_marginTop="47dp"
            android:textColor="#444444"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <TextView
        android:background="@color/divider_deep"
        android:layout_width="1dp"
        android:layout_height="match_parent" />

    <FrameLayout
        android:id="@+id/frame_color_2"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent">
        <ImageView
            android:src="@mipmap/frame_color2"
            android:paddingTop="28dp"
            android:paddingLeft="20dp"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:text="@string/beige_board"
            android:layout_gravity="right"
            android:layout_marginTop="47dp"
            android:textColor="#444444"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>
    <TextView
        android:background="@color/divider_deep"
        android:layout_width="1dp"
        android:layout_height="match_parent" />
    <FrameLayout
        android:id="@+id/frame_color_3"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent">
        <ImageView
            android:src="@mipmap/frame_color3"
            android:paddingTop="28dp"
            android:scaleType="fitXY"
            android:paddingLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:text="@string/xuan_board"
            android:layout_gravity="right"
            android:layout_marginTop="47dp"
            android:textColor="#444444"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>
    <TextView
        android:background="@color/divider_deep"
        android:layout_width="1dp"
        android:layout_height="match_parent" />
    <FrameLayout
        android:id="@+id/frame_color_4"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent">
        <ImageView
            android:src="@mipmap/frame_color4"
            android:paddingTop="28dp"
            android:paddingLeft="20dp"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:text="@string/grey_board"
            android:layout_gravity="right"
            android:layout_marginTop="47dp"
            android:textColor="#444444"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>
    <TextView
        android:background="@color/divider_deep"
        android:layout_width="1dp"
        android:layout_height="match_parent" />
    <FrameLayout
        android:id="@+id/frame_color_5"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent">
        <ImageView
            android:src="@mipmap/frame_color5"
            android:paddingTop="28dp"
            android:paddingLeft="20dp"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:text="@string/black_board"
            android:layout_gravity="right"
            android:layout_marginTop="47dp"
            android:textColor="#444444"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

</LinearLayout>